=Inserindo rotas funcionabilidade de editar e excluir

--- a/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -1,29 +1,38 @@
 <section class="container criar-pensamentos ff-inter">
   <header class="header">
     <h2>Adicione um <br>pensamento novo:</h2>
-    <app-listar-pensamento></app-listar-pensamento>
   </header>
-  <form>
+  <form [formGroup]="formulario">
     <label for="pensamento">Pensamento</label>
     <input
       type="textarea"
       class="input"
       id="pensamento"
-      name="pensamento"
+      formControlName="conteudo"
       placeholder="Digite o pensamento"
-     [(ngModel)]="pensamento.conteudo"
 
     >
+    <div class="mensage__erro" *ngIf="formulario.get('conteudo')?.errors && formulario.get('conteudo')?.touched">
+      Pensamento é obrigatorio!
+    </div>
+
     <label for="autoria">Autoria ou fonte</label>
     <input
       type="text"
       class="input"
       id="autoria"
-      name="autoria"
+      formControlName="autoria"
       placeholder="Digite a autoria ou fonte"
-      [(ngModel)]="pensamento.autoria"
 
     >
+    <div class="mensage__erro" *ngIf="formulario.get('autoria')?.errors?.['required'] && formulario.get('autoria')?.touched">
+      Autoria é obrigatorio!
+    </div>
+
+    <div class="mensage__erro" *ngIf="formulario.get('autoria')?.errors?.['minlength'] && formulario.get('autoria')?.touched">
+      Autoria precisa ter no minimo 3 caracteres!
+    </div>
+
     <label for="modelo">Selecione o modelo do card:</label>
     <div class="container-radio">
       <div class="radio-modelo">
@@ -32,8 +41,8 @@
             type="radio"
             id="modelo1"
             value="modelo1"
-            name="modelo-card"
-            [(ngModel)]="pensamento.autoria"
+            formControlName="modelo"
+
           >
           <div class="custom-radio">
             <span></span>
@@ -42,9 +51,9 @@
         </label>
         Prévia:
         <div class="modelo modelo1 ff-roboto-mono">
-          <img src="../../../../assets/Imagens/modelo1.png" alt="Aspas azuis">
-          <p class="conteudo"> {{ pensamento.conteudo }}</p>
-          <p class="autoria"> {{ pensamento.autoria }}</p>
+          <img src="../../../../assets/imagens/modelo1.png" alt="Aspas azuis">
+          <p class="conteudo">{{ formulario.get('conteudo')?.value }}</p>
+          <p class="autoria"><b>{{ formulario.get('autoria')?.value }}</b></p>
         </div>
       </div>
 
@@ -54,8 +63,7 @@
             type="radio"
             id="modelo2"
             value="modelo2"
-            name="modelo-card"
-            [(ngModel)]="pensamento.modelo"
+            formControlName="modelo"
 
           >
           <div class="custom-radio">
@@ -65,9 +73,9 @@
         </label>
         Prévia:
         <div class="modelo modelo2 ff-roboto-mono">
-          <img src="../../../../assets/Imagens/modelo2.png" alt="Aspas azul claro">
-          <p class="conteudo"> {{ pensamento.conteudo }}</p>
-          <p class="autoria"> {{ pensamento.autoria }}</p>
+          <img src="../../../../assets/imagens/modelo2.png" alt="Aspas azul claro">
+          <p class="conteudo">{{ formulario.get('conteudo')?.value }}</p>
+          <p class="autoria"><b>{{ formulario.get('autoria')?.value }}</b></p>
         </div>
       </div>
 
@@ -77,8 +85,8 @@
             type="radio"
             id="modelo3"
             value="modelo3"
-            name="modelo-card"
-            [(ngModel)]="pensamento.modelo"
+            name="modelo"
+            formControlName="modelo"
           >
           <div class="custom-radio">
             <span></span>
@@ -87,15 +95,15 @@
         </label>
         Prévia:
         <div class="modelo modelo3 ff-roboto-mono">
-          <img src="../../../../assets/Imagens/modelo3.png" alt="Aspas verdes">
-          <p class="conteudo"> {{ pensamento.conteudo }}</p>
-          <p class="autoria"> {{ pensamento.autoria }}</p>
+          <img src="../../../../assets/imagens/modelo3.png" alt="Aspas verdes">
+          <p class="conteudo">{{ formulario.get('conteudo')?.value }}</p>
+          <p class="autoria"><b>{{ formulario.get('autoria')?.value }}</b></p>
         </div>
       </div>
     </div>
     <div class="acoes">
-      <button (click)="criarPensamento()" class="botao">Salvar</button>
-      <button (click)="cancelarPensamento()" class="botao">Cancelar</button>
+      <button (click)="criarPensamento()" [disabled]="!formulario.valid" [ngClass]="habilitarBotao()">Salvar</button>
+      <button (click)="cancelar()" class="botao">Cancelar</button>
     </div>
   </form>
 </section>
