--- a/src/app/componentes/cabecalho/cabecalho.component.html
+++ b/src/app/componentes/cabecalho/cabecalho.component.html
@@ -1,7 +1,9 @@
-<head class="cabecalho ff-inter">
+<header class="cabecalho ff-inter">
   <div class="logo">
-      <img src="../../../assets/Imagens/logo-memoteca.png" alt="Logo da  aplicação Memoteca">
-      <p>Guarde trechos de músicas, ccitações de livros, pensamentos e suas melhores ideias</p>
+    <img src="../../../assets/imagens/logo-memoteca.png" alt="Logo da aplicação Memoteca">
+    <p>Guarde trechos de músicas, citações de livros, pensamentos e suas melhores ideias.</p>
   </div>
-    <img class="imagem" src="../../../assets/Imagens/computador-cabecalho.png" alt="imagem de um computador">
-</head>
+  <img class="imagem" src="../../../assets/imagens/computador-cabecalho.png" alt="Imagem de um computador">
+</header>
+
+
