--- a/src/app/componentes/pensamentos/pensamento/pensamento.component.html
+++ b/src/app/componentes/pensamentos/pensamento/pensamento.component.html
@@ -3,10 +3,13 @@
   <p class="conteudo">{{ pensamento.conteudo }}</p>
   <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
   <div class="acoes">
-    <button class="botao-editar">
-      <img src="/assets/imagens/icone-editar.png" alt="Ícone de editar">
+    <button class="botao-favorito" (click)="atualizarFavoritos()">
+      <img src="/assets/imagens/icone-favorito-{{mudariconeFavorito() }}.png" alt="Ìcone {{mudariconeFavorito() }}">
     </button>
-    <button class="botao-excluir">
+    <button class="botao-editar">
+      <img src="/assets/imagens/icone-editar.png" routerLink="/pensamentos/editarPensamento/{{pensamento.id}}" alt="Ícone de editar">
+    </button>
+    <button class="botao-excluir" routerLink="/pensamentos/excluirPensamento/{{pensamento.id}}">
       <img src="/assets/imagens/icone-excluir.png" alt="Ícone de excluir">
     </button>
   </div>
