--- a/src/app/componentes/rodape/rodape.component.css
+++ b/src/app/componentes/rodape/rodape.component.css
@@ -1,45 +1,43 @@
-.cabecalho {
-  background: url(/assets/imagens/fundo-cabecalho.png);
-  background-size: cover;
-  display: flex;
+footer {
+  background-image: url(/assets/imagens/fundo-rodape.png);
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  gap: 0px 0px;
+  grid-template-areas:
+    "TextoCopyright LogoRodape .";
   align-items: center;
-  justify-content: space-between;
+  padding: 1rem 2rem;
 }
 
-.cabecalho .logo {
-  width: 46%;
-  padding: 2rem 3rem;
+.TextoCopyright {
+  justify-self: center;
+  grid-area: TextoCopyright;
 }
 
-.cabecalho .logo img {
-  width: 90%;
-  max-width: 350px;
-  margin-bottom: 2rem;
+.LogoRodape {
+  justify-self: center;
+  grid-area: LogoRodape;
 }
 
-.cabecalho .imagem{
-  width: 40%;
-}
-
-.cabecalho p {
-  font-size: 2rem;
-  color: #6BD1FF;
+footer small {
+  color: white;
 }
 
 @media (max-width: 576px) {
   .cabecalho .logo {
     padding: 2rem;
   }
+
   .cabecalho p {
     font-size: 1.5rem
   }
 }
 
 @media (max-width: 768px) {
-  .cabecalho .logo {
-    width: 90%;
-  }
-  .cabecalho .imagem {
-    display: none;
+  footer {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 1rem;
   }
 }
